# python-project-template

./: README.md  cookiecutter.json
tests/: test_{{cookiecutter.module_variable_name}}.py
{{cookiecutter.module_variable_name}}/: .pre-commit-config.yaml  .python-version  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.module_variable_name}}/docs/source/: conf.py  index.rst
