[tool.poetry]
name = "{{cookiecutter.module_variable_name}}"
version = "{{cookiecutter.package_version}}"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.group.dev.dependencies]
black = "^23.1a1"
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-coverage = "^0.0"
ruff = "^0.0.203"
sphinx = "^6.0.0"
sphinx-autodoc-typehints = "^1.19.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
