[tool.poetry]
name = "{{cookiecutter.module_variable_name}}"
version = "{{cookiecutter.package_version}}"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.group.dev.dependencies]
black = "^24.1"
flake8 = "^7.0.0"
mypy = "^1.8"
pytest = "^8.0.0"
pytest-coverage = "^0.0"
ruff = "^0.2.1"
sphinx = "^7.2.0"
sphinx-autodoc-typehints = "^1.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
